objects/npsp__Account_Soft_Credit__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account that gets this soft credit.</description>
        <inlineHelpText>The Account that gets this soft credit.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Soft Credits</relationshipLabel>
        <relationshipName>Account_Soft_Credits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount to be soft credited.</description>
        <inlineHelpText>The amount to be soft credited.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity__c</fullName>
        <description>The Opportunity that this soft credit applies to.</description>
        <inlineHelpText>The Opportunity that this soft credit applies to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Soft Credits</relationshipLabel>
        <relationshipName>Account_Soft_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Role__c</fullName>
        <description>The role associated with this soft credit. The role describes how the Account was involved with the Opportunity.</description>
        <inlineHelpText>The role associated with this soft credit. The role describes how the Account was involved with the Opportunity.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donation Source</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Soft Credit</label>
    <nameField>
        <displayFormat>Account SC-{0000}</displayFormat>
        <label>Account Soft Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Soft Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>